Add OS Config agent to stretch build.

--- a/manifests/official/gce/stretch.yml
+++ b/manifests/official/gce/stretch.yml
@@ -29,6 +29,7 @@ packages:
     - file
     - google-cloud-sdk
     - google-compute-engine
+    - google-osconfig-agent
     - python-google-compute-engine
     - python3-google-compute-engine
     - man
